--- a/setup.cfg
+++ b/setup.cfg
@@ -5,17 +5,17 @@
 
 [metadata]
 name = cellarr-array
-description = Add a short description here!
+description = Base class for handling TileDB backed arrays.
 author = Jayaram Kancherla
 author_email = jayaram.kancherla@gmail.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/cellarr/cellarr-array
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://github.com/cellarr/cellarr-array
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
@@ -49,7 +49,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-
+    tiledb
+    numpy
+    scipy
 
 [options.packages.find]
 where = src
