--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,8 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install cellarr-array[PDF]` like:
 # PDF = ReportLab; RXP
+optional = 
+    torch
 
 # Add here test requirements (semicolon/line-separated)
 testing =
