Adding support for dataloader on sparse and dense arrays (#14)
and other enhancements/bug fixes dealing with 1D arrays. Updated tests and documentation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,12 +62,15 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install cellarr-array[PDF]` like:
 # PDF = ReportLab; RXP
+optional =
+    torch
 
 # Add here test requirements (semicolon/line-separated)
 testing =
     setuptools
     pytest
     pytest-cov
+    %(optional)s
 
 [options.entry_points]
 # Add here console scripts like:
