--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ url = https://github.com/cellarr/cellarr-array
 # Add here related links, for example:
 project_urls =
     Documentation = https://github.com/cellarr/cellarr-array
-#    Source = https://github.com/pyscaffold/pyscaffold/
+   Source = https://github.com/cellarr/cellarr-array
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
@@ -70,6 +70,7 @@ testing =
     setuptools
     pytest
     pytest-cov
+    pandas
     %(optional)s
 
 [options.entry_points]
