--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -29,9 +29,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Test with tox
-        run: |
-          tox
+      # - name: Test with tox
+      #   run: |
+      #     tox
 
       - name: Build docs
         run: |
